--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(baxter_builder)
+project(bar_bot)
 
 find_package(catkin REQUIRED COMPONENTS
     actionlib
